Physics Engine - Vector Struct
Physics engine now works
have yet to implement gravity and friction

All X and Y positions have been changed to a new Vector Struct

GG

--- a/Worker/Worker.csproj
+++ b/Worker/Worker.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\2DVector\2DVector.csproj" />
     <ProjectReference Include="..\ConsoleApp1\TransformEngine.csproj" />
     <ProjectReference Include="..\ConsoleRenderer\ConsoleRenderer.csproj" />
+    <ProjectReference Include="..\PhysicsEngine\PhysicsEngine.csproj" />
   </ItemGroup>
 
 </Project>
