--- a/PhysicsEngine/PhysicsEngine.csproj
+++ b/PhysicsEngine/PhysicsEngine.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\2DVector\2DVector.csproj" />
+    <ProjectReference Include="..\ConsoleApp1\TransformEngine.csproj" />
   </ItemGroup>
 
 </Project>
